<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.martinbuchan.homesrus.ConfirmActivity">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="514dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment" />

        <TextView
            android:id="@+id/txtMonthlyPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_payment" />

        <TextView
            android:id="@+id/txtTotalPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_interest" />

        <TextView
            android:id="@+id/txtTotalInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_used" />

        <TextView
            android:id="@+id/txtRateUsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
